# mpimin

./: .gitignore  CMakeLists.txt  README.md  build  configure
cmake/machines/: rivanna
include/: config.in.h  main.h
src/: main.cpp
